<resources>
    <string name="app_name">Kinderlicht e.V.</string>
    <string name="title_activity_start">Kinderlicht e.V.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kinderlicht e.V.</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_item_Overview">Newsletter</string>
    <string name="nav_item_Birthdays">Birthdays</string>
    <string name="nav_item_ToDo">To-Do List</string>
    <string name="nav_item_Newsletter">Notifications</string>
    <string name="nav_item_Settings">Settings</string>
    <string name="nav_item_Donnations">Donnations</string>
    <string name="tv_spinner">Months:</string>
    <string name="tV_search">Search Name:</string>

    <string name="iB_ContentDescription">Button for etending the listView of the ToDos</string>
    <string name="b_Button_Standard">Button</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sw_theme">Enable Dark Mode</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="settings_key_theme">theme</string>
    <string name="settings_file_name">settings</string>
</resources>
